--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,8 @@ benchmarking_go
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-# Dependency directories (remove the comment below to include it)
-vendor/
+# Dependency directories - vendor is included for offline builds
+# vendor/
 
 # Go workspace file
 go.work
